force-app/main/default/objects/Extole_Debug_Log__c/Extole_Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Debug Log</label>
    <nameField>
        <label>Debug Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>DBG-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>