force-app/main/default/objects/Extole_Debug_Log__c/fields/Log_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Log_Timestamp__c</fullName>
    <label>Log Timestamp</label>
    <type>DateTime</type>
</CustomField>